// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accessors handles getter/setter arrays 1`] = `
{
  "a": [
    true,
    true,
  ],
  "getVal": [
    3,
  ],
  "setVal": undefined,
}
`;

exports[`Accessors handles getter/setter objects 1`] = `
{
  "a": {
    "x": 4,
  },
  "getVal": {
    "x": 2,
  },
  "setVal": undefined,
}
`;

exports[`Accessors handles getter/setter return objects from callbacks 1`] = `
{
  "a": "foo",
  "b": 2,
  "c": "baz",
  "d": 2,
  "testa": "bar",
  "testc": "qux",
}
`;

exports[`Accessors handles getters 1`] = `
{
  "a": 1,
  "b": 2,
  "getVal": "bar",
}
`;

exports[`Accessors handles setters 1`] = `
{
  "a": "foo",
  "setVal": undefined,
}
`;

exports[`Clone circular object 1`] = `
{
  "a": 1,
  "circular": [Circular],
}
`;

exports[`Merge deep three objects 1`] = `
{
  "a": 3,
  "b": [
    3,
    3,
  ],
  "c": {
    "x": 3,
    "y": [
      3,
      "😀",
    ],
    "z": 3,
  },
  "d": true,
  "e": null,
}
`;

exports[`Merge deep two objects 1`] = `
{
  "a": 2,
  "b": [
    2,
    2,
  ],
  "c": {
    "x": 2,
    "y": [
      2,
      "😀",
    ],
  },
  "d": true,
  "e": null,
}
`;

exports[`Options Arrays appendArrays 1`] = `
{
  "a": [
    1,
    1,
    2,
    2,
    3,
    3,
  ],
  "b": [
    2,
    [
      2,
      2,
    ],
    3,
    [
      3,
      3,
    ],
  ],
  "c": {
    "d": [
      2,
      2,
      "😀",
      3,
      3,
      "😀",
    ],
  },
}
`;

exports[`Options Arrays dedupArrays + afterEach (mergeVal should be deduped) 1`] = `
{
  "test": [
    1,
  ],
}
`;

exports[`Options Arrays dedupArrays + appendArrays 1`] = `
{
  "a": [
    1,
    2,
    3,
  ],
  "b": [
    2,
    [
      2,
      2,
    ],
    3,
    [
      3,
      3,
    ],
  ],
  "c": {
    "d": [
      2,
      "😀",
      3,
    ],
  },
}
`;

exports[`Options Arrays dedupArrays + prependArrays 1`] = `
{
  "a": [
    3,
    2,
    1,
  ],
  "b": [
    3,
    [
      3,
      3,
    ],
    2,
    [
      2,
      2,
    ],
  ],
  "c": {
    "d": [
      3,
      "😀",
      2,
    ],
  },
}
`;

exports[`Options Arrays dedupArrays 1`] = `
{
  "a": [
    2,
  ],
  "b": [
    2,
    [
      2,
      2,
    ],
  ],
  "c": {
    "d": [
      2,
      "😀",
    ],
  },
}
`;

exports[`Options Arrays prependArrays 1`] = `
{
  "a": [
    3,
    3,
    2,
    2,
    1,
    1,
  ],
  "b": [
    3,
    [
      3,
      3,
    ],
    2,
    [
      2,
      2,
    ],
  ],
  "c": {
    "d": [
      3,
      3,
      "😀",
      2,
      2,
      "😀",
    ],
  },
}
`;

exports[`Options Arrays sortArrays + afterEach (mergeVal should be sorted) 1`] = `
{
  "test": [
    1,
    2,
    3,
    4,
  ],
}
`;

exports[`Options Arrays sortArrays with boolean 1`] = `
{
  "a": [
    1,
    1,
    2,
    2,
    3,
    3,
  ],
  "b": [
    2,
    [
      2,
      2,
    ],
    3,
    [
      3,
      3,
    ],
  ],
  "c": {
    "d": [
      2,
      2,
      3,
      3,
      "😀",
      "😀",
    ],
  },
}
`;

exports[`Options Arrays sortArrays with function 1`] = `
{
  "a": [
    3,
    3,
    2,
    2,
    1,
    1,
  ],
  "b": [
    3,
    2,
    [
      2,
      2,
    ],
    [
      3,
      3,
    ],
  ],
  "c": {
    "d": [
      3,
      3,
      2,
      2,
      "😀",
      "😀",
    ],
  },
}
`;

exports[`Options Callbacks afterEach() arguments 1`] = `
{
  "a": 2,
  "b": {
    "c": "bar",
  },
}
`;

exports[`Options Callbacks afterEach() return value 1`] = `
{
  "a": "baz",
  "b": "baz",
}
`;

exports[`Options Callbacks afterEach() without return value 1`] = `
{
  "a": 2,
  "b": {
    "c": "bar",
  },
}
`;

exports[`Options Callbacks beforeEach() arguments 1`] = `
{
  "a": 2,
  "b": {
    "c": "bar",
  },
}
`;

exports[`Options Callbacks beforeEach() with return value 1`] = `
{
  "firstName": "baz",
  "fullName": "baz",
  "lastName": "baz",
}
`;

exports[`Options Callbacks beforeEach() without return value 1`] = `
{
  "a": 2,
  "b": {
    "c": "bar",
  },
}
`;

exports[`Options Callbacks filter() arguments 1`] = `
{
  "a": 2,
  "b": {
    "c": "bar",
  },
}
`;

exports[`Options Callbacks filter() false 1`] = `
{
  "b": {
    "c": "bar",
  },
}
`;

exports[`Options Callbacks filter() true 1`] = `
{
  "a": 2,
}
`;

exports[`Options Callbacks filter() without return value 1`] = `
{
  "a": 2,
  "b": {
    "c": "bar",
  },
}
`;

exports[`Options Callbacks onCircular() arguments 1`] = `
{
  "a": 1,
  "circular": [Circular],
}
`;

exports[`Options Callbacks onCircular() with return value 1`] = `
{
  "a": 1,
  "circular": true,
}
`;

exports[`Options Callbacks onCircular() without return value 1`] = `
{
  "a": 1,
  "circular": [Circular],
}
`;

exports[`Options Keys hoistEnumerable = false 1`] = `
[
  "firstName",
  "lastName",
  "fullName",
]
`;

exports[`Options Keys hoistEnumerable = true 1`] = `
[
  "firstName",
  "lastName",
  "fullName",
  "enumerableTrue",
]
`;

exports[`Options Keys hoistProto = false 1`] = `
[
  "firstName",
  "lastName",
  "fullName",
]
`;

exports[`Options Keys hoistProto = true 1`] = `
[
  "enumerableTrue",
  "enumerableFalse",
  "firstName",
  "lastName",
  "fullName",
]
`;

exports[`Options Keys onlyCommonKeys + onlyKeys 1`] = `
{
  "b": [
    3,
    3,
  ],
  "c": {
    "x": 3,
  },
}
`;

exports[`Options Keys onlyCommonKeys + skipKeys 1`] = `
{
  "b": [
    3,
    3,
  ],
  "c": {
    "x": 3,
  },
}
`;

exports[`Options Keys onlyCommonKeys 1`] = `
{
  "a": 3,
  "b": [
    3,
    3,
  ],
  "c": {
    "x": 3,
  },
}
`;

exports[`Options Keys onlyKeys + skipKeys 1`] = `
{
  "a": 3,
}
`;

exports[`Options Keys onlyKeys 1`] = `
{
  "a": 3,
  "c": {
    "x": 3,
  },
}
`;

exports[`Options Keys onlyUniversalKeys + onlyKeys 1`] = `
{
  "a": 3,
}
`;

exports[`Options Keys onlyUniversalKeys + skipKeys 1`] = `
{
  "b": [
    3,
    3,
  ],
  "c": {
    "x": 3,
  },
}
`;

exports[`Options Keys onlyUniversalKeys 1`] = `
{
  "a": 3,
  "b": [
    3,
    3,
  ],
  "c": {
    "x": 3,
  },
}
`;

exports[`Options Keys skipCommonKeys + onlyKeys 1`] = `
{
  "d": true,
}
`;

exports[`Options Keys skipCommonKeys + skipKeys 1`] = `
{
  "e": null,
}
`;

exports[`Options Keys skipCommonKeys 1`] = `
{
  "d": true,
  "e": null,
}
`;

exports[`Options Keys skipKeys 1`] = `
{
  "b": [
    3,
    3,
  ],
  "c": {
    "y": [
      3,
      "😀",
    ],
    "z": 3,
  },
  "d": true,
  "e": null,
}
`;

exports[`Options Keys skipUniversalKeys + onlyKeys 1`] = `
{
  "d": true,
}
`;

exports[`Options Keys skipUniversalKeys + skipKeys 1`] = `
{
  "d": true,
  "e": null,
}
`;

exports[`Options Keys skipUniversalKeys 1`] = `
{
  "d": true,
  "e": null,
}
`;

exports[`Options custom merge function accepts options 1`] = `
{
  "b": [
    1,
    1,
    2,
    2,
    3,
    3,
  ],
}
`;

exports[`Options custom merge function accepts options 2`] = `
{
  "b": [
    1,
    2,
    3,
  ],
}
`;
